--- a/public/css/crazypulka.css
+++ b/public/css/crazypulka.css
@@ -4,3 +4,9 @@
     padding: 0 !important;
     margin: 0 !important;
 }
+
+.content{
+    width: 100% !important;
+    margin-top: 5px !important;
+    padding: 0 !important;
+}
