--- a/public/css/crazypulka.css
+++ b/public/css/crazypulka.css
@@ -1,5 +1,5 @@
 /*Custom styles for site*/
-.container-fluid {
+.container-full {
     width: 100% !important;
     padding: 0 !important;
     margin: 0 !important;
